Redesign page to meet Paczka w Punkt base information

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,8 +2,8 @@
 ---
 
 // Colors
-$primary: #e5261f;
-$primary-dark: #a01b16;
+$primary: #f93722;
+$primary-dark: #f93722;
 $secondary: #f88379;
 $black: #2f2f41;
 $white: #ffffff;
@@ -23,7 +23,7 @@ $font-family-heading: "Playfair Display", serif, -apple-system;
 // Footer
 $footer-background-color: $primary;
 $footer-text-color: $white;
-$sub-footer-background-color: darken($primary, 10%);
+$sub-footer-background-color: $primary;
 $sub-footer-text-color: $white;
 
 // Bootstrap
