--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,9 +2,9 @@
 ---
 
 // Colors
-$primary: #f93722;
-$primary-dark: #f93722;
-$secondary: #f88379;
+$primary: #ffdc00;
+$primary-dark: #ffdc00;
+$secondary: #F7D65A;
 $black: #2f2f41;
 $white: #ffffff;
 $white-offset: #fff6f8;
